--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>Check Store Robots.txt</h2>
         <input type="text" id="storeUrl" placeholder="Enter store URL (e.g., example.com)">
         <button onclick="openRobotsTxt()">Check</button>
-    </div><div class="footer">Developed by MeshCode</div>
+    </div><div class="footer">Powered by Shopify</div>
 
 <script>
     function openRobotsTxt() {
